--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,23 @@ nav .active{
     margin-left: -6px;
     display: none;
 }
+.link{
+    color: #F0F0F0;
+    display: inline-block;
+    font-size: 28px;
+    line-height: 40px;
+    background-color: #B3B3B3;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    text-align: center;
+    margin: 0 0 0 3px;
+    transition-property: background-color;
+    transition-duration: 0.2s;
+}
+.link:hover{
+    background-color: #666;
+}
 .show{
     display: block;
 }
